// Copyright Â© 2017-2018 Stratumn SAS
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/stratumn/go-indigonode/cli/grpc/ext/ext.proto";

package stratumn.indigonode.app.indigo.fossilizer.grpc;

option go_package = "github.com/stratumn/go-indigonode/app/indigo/grpc/fossilizer;fossilizer";

// The Indigo Fossilizer service definition.
service IndigoFossilizer {
    // Get information about the Indigo Fossilizer service.
    rpc GetInfo(InfoReq) returns (InfoResp) {
        option (stratumn.indigonode.cli.ext.method_desc) = "Get information about the Indigo Fossilizer service";
    }

    // Requests data to be fossilized.
    rpc Fossilize(FossilizeReq) returns (FossilizeResp) {
        option (stratumn.indigonode.cli.ext.method_desc) = "Requests data to be fossilized";
    }

}

message InfoReq {
}

message InfoResp {
    bytes data = 1 [
        (stratumn.indigonode.cli.ext.field_desc) = "JSON-encoded fossilizer information"
    ];
}

message FossilizeReq {
    bytes data = 1 [
        (stratumn.indigonode.cli.ext.field_desc) = "data to fossilize"
    ];
    bytes meta = 2 [
        (stratumn.indigonode.cli.ext.field_desc) = "meta information about the data to fossilize"
    ];
}

message FossilizeResp {
}
